<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/actionBar"
        layout="@layout/navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_dp"
        android:layout_alignParentTop="true"
        app:layout_heightPercent="8%" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/lvContractorList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnQuerySelect"
        android:layout_below="@+id/actionBar"
        android:paddingLeft="@dimen/ten_dp"
        android:scrollbars="none" />

    <!--<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnQuerySelect"
        android:layout_below="@+id/actionBar"
        android:background="@null"
        android:scrollbars="none">

        <com.lzjz.expressway.view.CustomListView
            android:id="@+id/lvContractorList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:background="@null"
            android:divider="@color/gray"
            android:dividerHeight="1dp"
            android:scrollbars="none" />
    </ScrollView>-->

    <RelativeLayout
        android:id="@+id/rlSearch"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnQuerySelect"
        android:layout_below="@+id/actionBar"
        android:background="@null"
        android:visibility="gone">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvCommonWorkingProcedure"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/twenty_sp" />

    </RelativeLayout>

    <com.mancj.materialsearchbar.MaterialSearchBar
        android:id="@+id/searchBar"
        style="@style/MaterialSearchBarLight"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:mt_hint="@string/input_working_name"
        app:mt_maxSuggestionsCount="10"
        app:mt_speechMode="false" />

    <Button
        android:id="@+id/btnQuerySelect"
        android:layout_width="match_parent"
        android:layout_height="@dimen/forty"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/ten_dp"
        android:background="@drawable/btn_blue"
        android:text="@string/query"
        android:textColor="@color/white"
        android:textSize="@dimen/fourteen_sp" />

    <Button
        android:id="@+id/btnNoData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@null"
        android:drawableTop="@drawable/no_data"
        android:text="@string/no_msg"
        android:textSize="@dimen/fourteen_sp"
        android:visibility="gone" />
</com.zhy.android.percent.support.PercentRelativeLayout>
