<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F1F0"
    android:orientation="vertical">

    <include
        android:id="@+id/actionBar"
        layout="@layout/navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_dp"
        android:layout_alignParentTop="true"
        android:visibility="gone"
        app:layout_heightPercent="8%" />

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnAddProcess"
        android:layout_below="@+id/actionBar"
        android:background="#F0F1F0"
        app:srlEnableLoadMoreWhenContentNotFull="true">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvMsg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/txtNOAnyData"
            android:background="#F0F1F0"
            android:paddingBottom="@dimen/five_dp"
            android:scrollbars="none" />
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>

    <Button
        android:id="@+id/btnAddProcess"
        android:layout_width="match_parent"
        android:layout_height="@dimen/forty"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/ten_dp"
        android:background="@drawable/btn_blue"
        android:text="@string/add"
        android:textColor="@color/white"
        android:textSize="@dimen/fourteen_sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@null"
        android:drawableTop="@drawable/no_data"
        android:text="@string/no_msg"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnNoProcessAdd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/forty"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/ten_dp"
        android:background="@drawable/btn_blue"
        android:text="@string/add"
        android:textColor="@color/white"
        android:textSize="@dimen/fourteen_sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnProcessChoice"
        android:layout_width="match_parent"
        android:layout_height="@dimen/forty"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/ten_dp"
        android:background="@drawable/btn_blue"
        android:text="@string/process_choice"
        android:textColor="@color/white"
        android:textSize="@dimen/fourteen_sp"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/llSearchData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null"
        android:visibility="gone">

        <Button
            android:id="@+id/btnNoData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:drawableTop="@drawable/no_data" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnNoData"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_msg"
                android:textColor="@color/black"
                android:textSize="@dimen/sixteen_sp" />

            <TextView
                android:id="@+id/txtClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="清空条件"
                android:textColor="@color/main_bg"
                android:textSize="@dimen/sixteen_sp" />
        </LinearLayout>
    </RelativeLayout>
</com.zhy.android.percent.support.PercentRelativeLayout>